    - Don't rebuild the entire router store every time we get 32K of
      routers: rebuild it when the journal gets very large, or when
      the gaps in the store get very large.

  o Minor features:
    - When routers publish SVN revisions in their router descriptors,
      authorities now include those versions correctly in networkstatus
      documents.


Changes in version 0.1.2.13 - 2007-04-24
  o Minor fixes:
    - Fix a memory leak when we ask for "all" networkstatuses and we
      get one we don't recognize.
    - Add more asserts to hunt down bug 417.
    - Disable kqueue on OS X 10.3 and earlier, to fix bug 371.


Changes in version 0.1.2.12-rc - 2007-03-16
  o Major bugfixes:
    - Fix an infinite loop introduced in 0.1.2.7-alpha when we serve
      directory information requested inside Tor connections (i.e. via
      begin_dir cells). It only triggered when the same connection was
      serving other data at the same time. Reported by seeess.

  o Minor bugfixes:
    - When creating a circuit via the controller, send a 'launched'
      event when we're done, so we follow the spec better.


Changes in version 0.1.2.11-rc - 2007-03-15
  o Minor bugfixes (controller), reported by daejees:
    - Correct the control spec to match how the code actually responds
      to 'getinfo addr-mappings/*'.
    - The control spec described a GUARDS event, but the code
      implemented a GUARD event. Standardize on GUARD, but let people
      ask for GUARDS too.


Changes in version 0.1.2.10-rc - 2007-03-07
  o Major bugfixes (Windows):
    - Do not load the NT services library functions (which may not exist)
      just to detect if we're a service trying to shut down. Now we run
      on Win98 and friends again.

  o Minor bugfixes (other):
    - Clarify a couple of log messages.
    - Fix a misleading socks5 error number.


Changes in version 0.1.2.9-rc - 2007-03-02
  o Major bugfixes (Windows):
    - On MinGW, use "%I64u" to printf/scanf 64-bit integers, instead